--- a/angular-amplify-cognito/angular.json
+++ b/angular-amplify-cognito/angular.json
@@ -23,12 +23,18 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "allowedCommonJsDependencies": [
+              "crypto", "url", "uuid", "buffer", "ulid", "zen-observable", "lodash/get", "lodash/isEmpty"
+              , "crypto-js/lib-typedarrays", "crypto-js/lib-typedarrays", "fast-xml-parser", "@aws-crypto/sha256-browser",
+              "@aws-crypto/crc32", "lodash/isEqual", "@aws-crypto/sha256-js", "isomorphic-unfetch", "js-cookie", 
+              "crypto-js/hmac-sha256",  "axios", "lodash"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -93,7 +99,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
